--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="/arrays.js"></script>
     <title>Array Metoder - Dynamisk web</title>
 </head>
 <body>
     <h1>Array Metoder</h1>
     <p>Åbn konsollen for at se dine opgaveløsninger</p>
 
-    <script src="/arrays.js"></script>
 </body>
 </html>
 
